# GDCAPI

./: .gitignore  CMakeLists.txt  GameInfo.cpp  GdHandle.cpp  HAPIH.cpp  LevelInfo.cpp  MemoryReadException.cpp  PlayerInfo.cpp  README.md  __gd_ptr.cpp
Dependencies/HAPIH/include/: HAPIH.h
include/: GameInfo.h  GdHandle.h  HAPIH.h  LevelInfo.h  MemoryReadException.h  PlayerInfo.h  __gd_ptr.h  __gdcapimain.h
